linked details to search results, rebased search for database
