# backend/generated/swagger.json
@@ -47,6 +47,9 @@
 					"purchasedBy": {
 						"type": "string"
 					},
+					"id": {
+						"type": "string"
+					},
 					"postedByName": {
 						"type": "string"
 					},
@@ -86,6 +89,9 @@
 						"type": "string"
 					},
 					"acceptedBy": {
+						"type": "string"
+					},
+					"id": {
 						"type": "string"
 					},
 					"postedByName": {
@@ -186,26 +192,6 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/posts": {
-			"get": {
-				"operationId": "AllPosts",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "number",
-									"format": "double"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/posts/service": {
 			"post": {
 				"operationId": "AddNewService",
@@ -345,7 +331,7 @@
 				]
 			}
 		},
-		"/posts/posts": {
+		"/posts": {
 			"get": {
 				"operationId": "GetAllData",
 				"responses": {
